# mamba

./: .dockerignore  .gitignore  .gitmodules  COLAB_TRAINING_GUIDE.md  Dockerfile  GPU_COMPATIBILITY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  REPLICATION_GUIDE.md  config_mamba.py  conftest.py  conv1dtests.ipynb  count_params.py  debug.py  generation.py  induction_head_run.py  mixer_seq_simple.py  modeling.py  pyproject.toml  requirements.txt  reset_env.sh  rocm6_0.patch  run.py  run.sh  run_dist_test.py  run_lra_parallel.sh  run_multi.py  run_multi_induction.py  run_multi_long.py  runfour.py  runthree.py  runtwo.py  s4.py  setup.py  setup_min_fwd.py  setup_onlyCUDA.py  ssd_minimal.py  test_mamba_ssm_state.py  (+12 more)
.github/scripts/: build.sh  check_for_ngc_images.sh  check_for_releases.sh  test.sh
.github/workflows/: _build.yml  _build_in_container.yml  build.yml  build_in_container.yml  build_in_container_scheduled.yml  install.yaml  installs.yaml  publish.yaml  test.yaml  tests.yaml
benchmarks/: benchmark_README.md  benchmark_generation_mamba_simple.py  benchmark_speed_mamba123.py  benchmark_text_generation_latency.py  benchmark_text_generation_latency_visual.py  scaling_data.py  scaling_plots.py  scaling_plots_pythia.py  test_rtx4080_visual.py
configs/: mamba_1024.yaml  mamba_125m.yaml  mamba_1k.yaml  mamba_1m.yaml  mamba_65k.yaml  rtx4080.json
csrc/selective_scan/: reverse_scan.cuh  selective_scan.cpp  selective_scan.cu  selective_scan.h  selective_scan_bwd_bf16_complex.cu  selective_scan_bwd_bf16_real.cu  selective_scan_bwd_fp16_complex.cu  selective_scan_bwd_fp16_real.cu  selective_scan_bwd_fp32_complex.cu  selective_scan_bwd_fp32_real.cu  selective_scan_bwd_kernel.cuh  selective_scan_bwd_kernel.ori.cuh  selective_scan_common.h  selective_scan_fwd2.cu  selective_scan_fwd3.cu  selective_scan_fwd4.cu  selective_scan_fwd_bf16.cu  selective_scan_fwd_fp16.cu  selective_scan_fwd_fp32.cu  selective_scan_fwd_kernel.cuh  selective_scan_fwd_kernel_minimal.cuh  static_switch.h  uninitialized_copy.cuh
datasets/: datasets.py
ds/: datasets.py
evals/: lm_harness_eval.py
examples/: predict_next_token.py
kernel/: readme.md  setup.py  test_selective_scan_benchmark.py  test_selective_scan_new2old.py  test_selective_scan_speed.py
lra/: lra.py
mamba_ane/: README.md  __init__.py  requirements.txt
mamba_ane/docs/: mamba3_siso_viz.html
mamba_ane/models/: __init__.py  hybrid1d.py  hybrid_parallel.py  stvmamba_hybrid.py
mamba_ane/modules/: __init__.py  mamba3.py  mamba3_parallel.py  stvmamba_modules.py
mamba_ane/utils/: export.py  export_parallel.py  export_stvmamba_parallel.py
mamba_ssm/: __init__.py
mamba_ssm/distributed/: distributed_utils.py  tensor_parallel.py
mamba_ssm/models/: config_mamba.py  mixer_seq_simple.py
mamba_ssm/modules/: block.py  context_parallel.py  mamba2.py  mamba2_simple.py  mamba3.py  mamba3_simple.py  mamba_simple.py  mha.py  mlp.py  moe.py  ssd_minimal.py
mamba_ssm/ops/: selective_scan_interface.py  selective_scan_interface_ compilable.py
mamba_ssm/utils/: determinism.py  generation.py  hf.py  torch.py
rocm_update_files/: amd_hip_bf16.h
scripts/: download_hg38.sh  shard_dataset.py
simple_mamba/: mamba.py  mamba_lm.py  pscan.py
src/eval/: eval_metrics.py
src/model/: dna_embeddings.py  mamba_wrapper.py
src/training/: scheduler.py  train_mamba.py
ssm-benchmark-master/: .gitignore  LICENSE  README.md  requirements.txt  train.py
ssm-benchmark-master/accelerated-scan-0.1.2/: CITATION.cff  LICENSE  README.md  pyproject.toml
ssm-benchmark-master/accelerated-scan-0.1.2/accelerated_scan/: __init__.py  ref.py  triton.py  warp.cuh  warp.py
ssm-benchmark-master/accelerated-scan-0.1.2/tests/: bench.py  test_eq.py
ssm-benchmark-master/configs/: aan-S4-complex.yaml  aan-S4-real.yaml  aan-hawk.yaml  aan-mamba-complex.yaml  aan-mamba-real.yaml  cifar-10-hawk.yaml  cifar-10-mamba.yaml  imdb-S4-complex-bid-emb.yaml  imdb-S4-complex-bid.yaml  imdb-S4-complex-emb.yaml  (+9 more)
tests/: benchmark_determinism_kernels.py  test_config_parse.py  test_determinism.py  test_generation.py  test_import_isolation.py  test_mamba2_d_has_hdim.py  test_mamba3_cpu.py  test_mamba3_gpu.py  test_mamba3_triton.py  test_mamba3_triton_bwd.py  test_mamba_chunk_processing.py  test_mamba_num_params.py  test_padding.py  test_rtx4080.py  test_s4_mamba_num_params.py  test_selective_scan_cuda.py
train/: prompt.py  train.py
trainer/: data.py
(+115 files in other folders)
