[project]
name = "mamba_ssm"
description = "Mamba state-space model"
readme = "README.md"
authors = [
    { name = "Tri Dao", email = "tri@tridao.me" },
    { name = "Albert Gu", email = "agu@cs.cmu.edu" }
]
requires-python = ">= 3.9"
dynamic = ["version"]
license = { file = "LICENSE" }  # Include a LICENSE file in your repo
keywords = ["cuda", "pytorch", "state-space model"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Unix"
]
dependencies = [
    "torch",
    "ninja",
    "einops",
    "transformers",
    "packaging",
    "setuptools>=61.0.0",
]
[project.urls]
Repository = "https://github.com/state-spaces/mamba"

[project.optional-dependencies]
causal-conv1d = [
    "causal-conv1d>=1.2.0"
]
dev = [
    "pytest"
]


[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "torch",
    "packaging",
    "ninja",
]
build-backend = "setuptools.build_meta"
